bulk format